--- a/crates/verbs_rs/Cargo.toml
+++ b/crates/verbs_rs/Cargo.toml
@@ -2,6 +2,12 @@
 name = "verbs-rs"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+description.workspace = true
+readme = "../../README.md"
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [dependencies]
 revm = { workspace = true, features = ["ethersdb", "std", "serde"] }
@@ -22,7 +28,7 @@ futures.workspace = true
 kdam = "0.3.0"
 log = "0.4.19"
 
-verbs-macros = { path="../verbs_macros" }
+verbs-macros = { path="../verbs_macros", version = "0.2.1"}
 
 # Encoding/decoding
 serde_json = "1"
