--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ resolver = "2"
 version = "0.2.2"
 edition = "2021"
 license = "MIT"
+authors = ["Jordan <jordan@simtopia.ai>", "Marc <marc@simtopia.ai>"]
 description = "Ethereum Agent based simulation library"
 readme = "README.md"
 repository = "https://github.com/simtopia/verbs/"
