--- a/crates/verbs_macros/Cargo.toml
+++ b/crates/verbs_macros/Cargo.toml
@@ -2,6 +2,13 @@
 name = "verbs-macros"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
+authors.workspace = true
+description = "Macros for VERBS Ethereuem simulation library"
+readme = "../../README.md"
+repository.workspace = true
+keywords.workspace = true
+categories.workspace = true
 
 [lib]
 proc-macro = true
