--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 license = "MIT"
+authors = ["Jordan <jordan@simtopia.ai>", "Marc <marc@simtopia.ai>"]
 description = "Ethereum Agent based simulation library"
 readme = "README.md"
 repository = "https://github.com/simtopia/verbs/"
