--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -101,10 +101,10 @@ jobs:
         - uses: dtolnay/rust-toolchain@stable
         - name: Build docs 📚
           run: cargo doc --no-deps
-        - name: Test publish verbs simulation library
-          run: cargo publish --dry-run -p verbs-rs
-        - name: Test publish verbs macros
-          run: cargo publish --dry-run -p verbs-macros
+        # - name: Test publish verbs simulation library
+        #   run: cargo publish --dry-run -p verbs-rs
+        # - name: Test publish verbs macros
+        #   run: cargo publish --dry-run -p verbs-macros
 
   build_docs:
     runs-on: ubuntu-latest
